--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -146,10 +146,16 @@
     <ClCompile Include="Dragons.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Core\ActionProperties.h" />
     <ClInclude Include="Core\Cards\Card.h" />
     <ClInclude Include="Core\Cards\Offense\DesperateStrike.h" />
     <ClInclude Include="Core\Cards\Offense\SacrificialAttack.h" />
     <ClInclude Include="Core\Core.h" />
+    <ClInclude Include="Core\Events\ActionEvents.h" />
+    <ClInclude Include="Core\Events\EventSubscriber.h" />
+    <ClInclude Include="Core\Events\GameEvents.h" />
+    <ClInclude Include="Core\Events\TurnEvents.h" />
+    <ClInclude Include="Core\GameConstants.h" />
     <ClInclude Include="Core\GameState.h" />
     <ClInclude Include="Core\Player.h" />
   </ItemGroup>
