--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Core\Cards\Offense\DesperateStrike.cpp" />
+    <ClCompile Include="Core\Cards\Offense\FairFight.cpp" />
     <ClCompile Include="Core\Cards\Offense\SacrificialAttack.cpp" />
     <ClCompile Include="Core\Core.cpp" />
     <ClCompile Include="Dragons.cpp" />
@@ -149,6 +150,7 @@
     <ClInclude Include="Core\ActionProperties.h" />
     <ClInclude Include="Core\Cards\Card.h" />
     <ClInclude Include="Core\Cards\Offense\DesperateStrike.h" />
+    <ClInclude Include="Core\Cards\Offense\FairFight.h" />
     <ClInclude Include="Core\Cards\Offense\SacrificialAttack.h" />
     <ClInclude Include="Core\Core.h" />
     <ClInclude Include="Core\Events\ActionEvents.h" />
