--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="Core\Cards\Offense\StarCurse.cpp" />
     <ClCompile Include="Core\Cards\Offense\VitalSpot.cpp" />
     <ClCompile Include="Core\Cards\Offense\WeaponScroll.cpp" />
+    <ClCompile Include="Core\Cards\Utility\AbsoluteZero.cpp" />
     <ClCompile Include="Core\Cards\Utility\Cheating.cpp" />
     <ClCompile Include="Core\Cards\Utility\DragonEquation.cpp" />
     <ClCompile Include="Core\Cards\Utility\DragonFlame.cpp" />
@@ -176,7 +177,9 @@
     <ClCompile Include="Core\Cards\Utility\DragonSight.cpp" />
     <ClCompile Include="Core\Cards\Utility\FrostFire.cpp" />
     <ClCompile Include="Core\Cards\Utility\HiddenTreasures.cpp" />
+    <ClCompile Include="Core\Cards\Utility\LifeExchange.cpp" />
     <ClCompile Include="Core\Cards\Utility\MindSteal.cpp" />
+    <ClCompile Include="Core\Cards\Utility\SetUp.cpp" />
     <ClCompile Include="Core\Cards\Utility\SummonDead.cpp" />
     <ClCompile Include="Core\Cards\Utility\TheThief.cpp" />
     <ClCompile Include="Core\Cards\Utility\WeaponOfChoice.cpp" />
@@ -191,6 +194,7 @@
     <ClInclude Include="Core\Cards\Defense\Barrier.h" />
     <ClInclude Include="Core\Cards\Defense\Cure.h" />
     <ClInclude Include="Core\Cards\Defense\DivineProtection.h" />
+    <ClInclude Include="Core\Cards\Utility\AbsoluteZero.h" />
     <ClInclude Include="Core\Cards\Utility\Cheating.h" />
     <ClInclude Include="Core\Cards\Utility\DragonEquation.h" />
     <ClInclude Include="Core\Cards\Utility\DragonFlame.h" />
@@ -223,7 +227,9 @@
     <ClInclude Include="Core\Cards\Utility\DragonSight.h" />
     <ClInclude Include="Core\Cards\Utility\FrostFire.h" />
     <ClInclude Include="Core\Cards\Utility\HiddenTreasures.h" />
+    <ClInclude Include="Core\Cards\Utility\LifeExchange.h" />
     <ClInclude Include="Core\Cards\Utility\MindSteal.h" />
+    <ClInclude Include="Core\Cards\Utility\SetUp.h" />
     <ClInclude Include="Core\Cards\Utility\SummonDead.h" />
     <ClInclude Include="Core\Cards\Utility\TheThief.h" />
     <ClInclude Include="Core\Cards\Utility\WeaponOfChoice.h" />
