--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -190,6 +190,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\ActionProperties.h" />
+    <ClInclude Include="Core\Cards\CardPosition.h" />
     <ClInclude Include="Core\Cards\Combo\DeathFee.h" />
     <ClInclude Include="Core\Cards\Utility\CorpsePuppet.h" />
     <ClInclude Include="Core\ComboProperties.h" />
