--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -146,14 +146,20 @@
     <ClCompile Include="Core\Cards\Combo\DifferentSides.cpp" />
     <ClCompile Include="Core\Cards\Combo\DoubleStrike.cpp" />
     <ClCompile Include="Core\Cards\Combo\DragonWeapons.cpp" />
+    <ClCompile Include="Core\Cards\Combo\DreamLand.cpp" />
     <ClCompile Include="Core\Cards\Combo\ElementalDragon.cpp" />
     <ClCompile Include="Core\Cards\Combo\FakeOut.cpp" />
+    <ClCompile Include="Core\Cards\Combo\InfernoLifeline.cpp" />
+    <ClCompile Include="Core\Cards\Combo\MagicTrick.cpp" />
+    <ClCompile Include="Core\Cards\Combo\NatureSpell.cpp" />
     <ClCompile Include="Core\Cards\Combo\Omniclaustra.cpp" />
     <ClCompile Include="Core\Cards\Combo\PowerUp.cpp" />
     <ClCompile Include="Core\Cards\Combo\Ritual.cpp" />
+    <ClCompile Include="Core\Cards\Combo\Soulstealer.cpp" />
     <ClCompile Include="Core\Cards\Combo\Superiority.cpp" />
     <ClCompile Include="Core\Cards\Combo\TotalEntanglement.cpp" />
     <ClCompile Include="Core\Cards\Combo\UltimateDefense.cpp" />
+    <ClCompile Include="Core\Cards\Combo\UltimateExchange.cpp" />
     <ClCompile Include="Core\Cards\Combo\Underworld.cpp" />
     <ClCompile Include="Core\Cards\Defense\ArmorUp.cpp" />
     <ClCompile Include="Core\Cards\Defense\Barrier.cpp" />
@@ -212,14 +218,20 @@
     <ClInclude Include="Core\Cards\Combo\DifferentSides.h" />
     <ClInclude Include="Core\Cards\Combo\DoubleStrike.h" />
     <ClInclude Include="Core\Cards\Combo\DragonWeapons.h" />
+    <ClInclude Include="Core\Cards\Combo\DreamLand.h" />
     <ClInclude Include="Core\Cards\Combo\ElementalDragon.h" />
     <ClInclude Include="Core\Cards\Combo\FakeOut.h" />
+    <ClInclude Include="Core\Cards\Combo\InfernoLifeline.h" />
+    <ClInclude Include="Core\Cards\Combo\MagicTrick.h" />
+    <ClInclude Include="Core\Cards\Combo\NatureSpell.h" />
     <ClInclude Include="Core\Cards\Combo\Omniclaustra.h" />
     <ClInclude Include="Core\Cards\Combo\PowerUp.h" />
     <ClInclude Include="Core\Cards\Combo\Ritual.h" />
+    <ClInclude Include="Core\Cards\Combo\Soulstealer.h" />
     <ClInclude Include="Core\Cards\Combo\Superiority.h" />
     <ClInclude Include="Core\Cards\Combo\TotalEntanglement.h" />
     <ClInclude Include="Core\Cards\Combo\UltimateDefense.h" />
+    <ClInclude Include="Core\Cards\Combo\UltimateExchange.h" />
     <ClInclude Include="Core\Cards\Combo\Underworld.h" />
     <ClInclude Include="Core\Cards\Utility\CorpsePuppet.h" />
     <ClInclude Include="Core\ComboProperties.h" />
